# aocv2_rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
scripts/aoc_analyzer/: pyproject.toml
scripts/aoc_analyzer/aoc_analyzer/: summary_statistics.py
src/: alg.rs  aoc.rs  base.rs  belinda.rs  ds.rs  dump.rs  generators.rs  graph_gen.rs  io.rs  lib.rs  main.rs  misc.rs  quality.rs  utils.rs
tests/: basic_api_test.rs
