[package]
name = "aocluster"
version = "0.0.1"
edition = "2021"
build = "build.rs"
description = "overlapping cluster augmenter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
itertools = "0.10.3"
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
ahash = { version = "0.8.0", features = ["serde"]}
rayon = "1.5.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bimap = { version = "0.6.2", features = ["serde"] }
bincode = "1.3.3"
lz4 = "1.24.0"
num_cpus = "1.13.1"
csv = "1.1.6"
nom = "7"
serde_json = "1.0"
probabilistic-collections = "*"
indicatif = {version = "*", features = ["rayon"]}
ordered-float = "3.0"
stats-cli = "3.0.1"
rand = {version = "0.8.5", features = ["small_rng"]}
priority-queue = "1.2.3"
shadow-rs = "0.11.0"
serde_with = "2.0.1"
comfy-table = "6.1.2"
roaring = "0.10.1"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

[build-dependencies]
shadow-rs = "0.11.0"
